# FOD-C

./: .gitignore  CMakeLists.txt  FOD-C  FutuOpenDClient.sln
3rd/Include/openssl/: opensslconf.h
FutuOpenDClient/: APIProtoHeader.cpp  APIProtoHeader.h  APIProtoPkg.cpp  APIProtoPkg.h  Buffer.cpp  Buffer.h  Common.cpp  Common.h  DebugLog.cpp  DebugLog.h  FutuOpenDClient.vcxproj  FutuOpenDClient.vcxproj.filters  IProtoHandler.h  ITcpHandler.h  NetCenter.cpp  NetCenter.h  QuoteHandler.cpp  QuoteHandler.h  SHA1.cpp  SHA1.h  TcpConnect.cpp  TcpConnect.h  main.cpp  myaes.cpp  myaes.h  myrsa.cpp  myrsa.h
FutuOpenDClient/pb/: pb_header.h  protoc.bat
FutuOpenDClient/pb/src/: Common.pb.cc  Common.pb.h  InitConnect.pb.cc  Qot_Common.pb.cc  Qot_Common.pb.h  Qot_GetHistoryKL.pb.h  Qot_GetHoldingChangeList.pb.cc  Qot_GetOptionChain.pb.cc  Qot_GetOptionChain.pb.h  Qot_GetOrderDetail.pb.cc  Qot_GetOwnerPlate.pb.cc  Qot_GetPlateSet.pb.cc  Qot_GetRehab.pb.cc  Qot_GetRehab.pb.h  Qot_GetSecuritySnapshot.pb.cc  Qot_GetSecuritySnapshot.pb.h  Qot_GetSuspend.pb.cc  Qot_GetWarrant.pb.cc  Qot_GetWarrant.pb.h  Qot_RequestHistoryKL.pb.cc  Qot_UpdateOrderDetail.pb.cc  Trd_Common.pb.cc  Trd_Common.pb.h
